--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Car Insurance Registration Form</h1>
+    <form method="post">
+      <label for="name">Name:</label>
+      <input type="text" id="name" required />
+      <label for="email">Email:</label>
+      <input type="email" id="email" required />
+      <label for="gender">Gender:</label>
+      <input type="radio" name="gender" id="male" required />
+      <label for="male">Male</label>
+      <input type="radio" name="gender" id="female" required />
+      <label for="female">Female</label>
+      <input type="radio" name="gender" id="others" required />
+      <label for="others">Others</label>
+      <br /><br />
+      <label for="cars">Car Brands</label>
+      <select name="cars" id="cars">
+        <option value="BMW" id="cars">BMW</option>
+        <option value="audi" id="cars">Audi</option>
+        <option value="Mercedez" id="cars">Mercedez</option>
+      </select>
+	<br/>
+		<br/>
+		
+      <label for="carage">Car Age</label>
+      <input type="number" id="carage" required />
+      <label for="dop">Date of Purchase (dop)</label>
+      <input type="date" id="dop" required />
+      <label for="password">Password</label>
+      <input type="password" id="passwor" required />
+      <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
