--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
       <label for="dop">Date of Purchase (dop)</label>
       <input type="date" id="dop" required />
       <label for="password">Password</label>
-      <input type="password" id="passwor" required />
+      <input type="password" id="password" required />
       <button type="submit">Submit</button>
     </form>
     <script type="text/javascript" src="./script.js">
